[gd_scene load_steps=4 format=3 uid="uid://derbnrboktp1g"]

[ext_resource type="Script" path="res://src/components/gui/DebugStatsContainer.gd" id="1_tmt6o"]
[ext_resource type="Theme" uid="uid://b2gmnph0w6d1k" path="res://src/themes/Base.theme" id="2_lqb0r"]
[ext_resource type="Script" path="res://src/components/gui/DebugStatLabel.gd" id="3_ows3h"]

[node name="DebugStatsContainer" type="PanelContainer"]
visibility_layer = 524289
custom_minimum_size = Vector2(200, 0)
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 867.43
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_tmt6o")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme = ExtResource("2_lqb0r")

[node name="Version" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = ": __VERSION__ commit: __COMMIT__"
script = ExtResource("3_ows3h")
label_text = "__VERSION__ commit: __COMMIT__"
type = 1
regular_update = null

[node name="OS" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = ": Windows GenericDevice"
script = ExtResource("3_ows3h")
label_text = "Windows GenericDevice"
type = 2
regular_update = null

[node name="SceneStats" type="Label" parent="VBoxContainer"]
layout_mode = 2
script = ExtResource("3_ows3h")
label_text = null
type = null
regular_update = null

[node name="FiguresCount" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = ": 0"
script = ExtResource("3_ows3h")
label_text = "0"
type = 3
regular_update = null

[node name="Angle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = ": 0"
script = ExtResource("3_ows3h")
label_text = "0"
type = 4
regular_update = null

[node name="WindowMode" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = ": 0"
script = ExtResource("3_ows3h")
label_text = "0"
type = 5
regular_update = true

[node name="Stats" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = ": 0"
script = ExtResource("3_ows3h")
label_text = "_"
type = null
regular_update = null

[node name="NodesPassed" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = ": 0"
script = ExtResource("3_ows3h")
label_text = "0"
type = null
regular_update = true

[node name="TimePassed" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = ": 0"
script = ExtResource("3_ows3h")
label_text = "0"
type = null
regular_update = true

[node name="MixRate" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = ": 0"
script = ExtResource("3_ows3h")
label_text = "0"
type = 6
regular_update = true

[node name="RenderMethod" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = ": 0"
script = ExtResource("3_ows3h")
label_text = "0"
type = 7
regular_update = true

[node name="DebugStatsTimer" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true
